# lizcode

./: .gitignore  README.md  pyproject.toml
lizcode/: __init__.py  __main__.py  cli.py
lizcode/config/: __init__.py  settings.py
lizcode/core/: __init__.py  agent.py  checkpoint.py  plan.py  prompts.py  session.py  state.py  subagent.py  tasks.py
lizcode/core/providers/: __init__.py  base.py  ollama.py  openrouter.py
lizcode/tools/: __init__.py  base.py  bash.py  browser.py  completion.py  edit_file.py  glob.py  grep.py  list_files.py  mode.py  model_completer.py  notebook.py  read_file.py  skill.py  task.py  todo_write.py  webfetch.py  write_file.py
tests/: __init__.py  conftest.py  mock_provider.py  test_bash.py  test_bash_gui.py  test_file_tools.py  test_plan_tools.py  test_prompts.py  test_tasks.py  test_tasks_scale.py  test_tools_misc.py  test_workflow.py
